--- a/package.json
+++ b/package.json
@@ -1,25 +1,22 @@
 {
   "name": "teamstats",
-  "version": "0.1.3",
+  "version": "1.0.3",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^3.2.2",
+    "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
-    "classnames": "^2.2.6",
-    "firebase": "^5.4.1",
-    "moment": "^2.22.2",
+    "firebase": "^5.6.0",
     "prop-types": "^15.6.2",
-    "react": "^16.4.2",
+    "react": "^16.6.3",
     "react-circular-progressbar": "^1.0.0",
-    "react-datepicker": "^1.6.0",
-    "react-dom": "^16.4.2",
-    "react-redux": "^5.0.7",
-    "react-redux-firebase": "^2.1.8",
+    "react-dom": "^16.6.3",
+    "react-redux": "^5.1.1",
+    "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5",
-    "react-swipeable-views": "^0.12.16",
+    "react-scripts": "^2.1.1",
+    "react-swipeable-views": "^0.12.18",
     "react-table": "^6.8.6",
-    "redux": "^4.0.0",
+    "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.5.8"
   },
@@ -30,13 +27,19 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "enzyme": "^3.6.0",
-    "enzyme-adapter-react-16": "^1.4.0",
-    "eslint": "^5.5.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.7.0",
+    "eslint": "^5.6.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.1",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
     "eslint-plugin-react": "^7.11.1",
-    "react-test-renderer": "^16.4.2"
-  }
+    "react-test-renderer": "^16.6.3"
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
