--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
+    "react-sweet-progress": "^1.1.2",
     "react-swipeable-views": "^0.12.18",
     "react-table": "^6.8.6",
     "redux": "^4.0.1",
