--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "dependencies": {
     "@material-ui/core": "^3.6.1",
     "@material-ui/icons": "^3.0.1",
+    "chart.js": "^2.7.3",
     "firebase": "^5.6.0",
     "prop-types": "^15.6.2",
     "react": "^16.6.3",
+    "react-chartjs-2": "^2.7.4",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.6.3",
+    "react-easy-chart": "^1.0.0",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.1",
-    "react-sweet-progress": "^1.1.2",
     "react-swipeable-views": "^0.12.18",
     "react-table": "^6.8.6",
+    "recharts": "^1.4.2",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.5.8"
