--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-chartjs-2": "^2.7.4",
     "react-circular-progressbar": "^1.0.0",
     "react-dom": "^16.6.3",
+    "react-firebase-file-uploader": "^2.4.2",
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^4.3.1",
