--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-redux": "^5.1.1",
     "react-redux-firebase": "^2.2.4",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "^2.1.1",
+    "react-scripts": "^2.1.3",
+    "react-swipeable-views": "^0.13.1",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.5.8"
