--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.3",
     "react-swipeable-views": "^0.13.1",
+    "react-table": "^6.9.2",
     "redux": "^4.0.1",
     "redux-auth-wrapper": "^2.0.3",
     "redux-firestore": "^0.5.8"
