--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.3",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.25",
+    "@fortawesome/free-regular-svg-icons": "^5.11.2",
+    "@fortawesome/free-solid-svg-icons": "^5.11.2",
+    "@fortawesome/react-fontawesome": "^0.1.7",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "chart.js": "^2.8.0",
